@@ -1,3 +1,8 @@
+2021-07-01  Araki Ken  <arakiken@users.sf.net>
+
+	* vt_parser.c: show_picture() restores vt_parser->is_visible_cursor
+	  if sixel_scrolling is true.
+
 2021-06-19  Araki Ken  <arakiken@users.sf.net>
 
 	* etc/key: Updated.
